--- a/aimbot_config.json
+++ b/aimbot_config.json
@@ -1,7 +1,8 @@
 {
   "pattern": "FF FF ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? 00 00 ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? 00 00 ?? ?? 00 00 A5 43",
   "offsets": {
-    "rep_offset": "0x80",
-    "scan_offset": "0x7C"
+    "rep_offset": "0xAA",
+    "scan_offset": "0xA6"
   }
 }
+
