--- a/aimbot_config.json
+++ b/aimbot_config.json
@@ -9,10 +9,11 @@
     "SCOPE_R": "FF FF FF FF 08 00 00 00 00 00 60 40 CD CC 8C 3F 8F C2 F5 3C CD CC CC 3D 06 00 00 00 00 00 19 3E 00 00 00 00 00 00 00 00 00 00 00 00 00 00 80 3F 33 33 13 40 00 00 B0 3F 00 00 80 3F 01",
 
 
-     "notice": "আপনার নোটিস টেক্সট এখানে লিখুন।\nএটি মাল্টিলাইন হতে পারে।\n\nUpdate: নতুন আপডেট যোগ করুন।"
+     "notice": " Panel Safe Now "
 
  
 }
+
 
 
 
